# yave

./: .gitignore  Cargo.toml  README.md
assets/base/: README.md
assets/base/blocks/: grass.toml  stone.toml
assets/base/pipelines/: world.toml
assets/base/shaders/: world.wgsl
benches/: block.rs  chunk.rs  voxel_vertex.rs
src/: assets.rs  game.rs  lib.rs  main.rs
src/client/: assets.rs  camera.rs  chunk.rs  game.rs  mod.rs  player.rs  renderer.rs  transform.rs  voxel.rs
src/network/: mod.rs
src/server/: game.rs  mod.rs
src/world/: chunk.rs  mod.rs
tests/: block.rs  chunk.rs  voxel.rs
