[package]
name = "yave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
wgpu = "0.12.0"
image = "0.24.2"
cgmath = "0.18.0"
bevy_ecs = "0.7.0"
thunderdome = "0.5.0"
pollster = "0.2.5"
log = "0.4.17"
env_logger = "0.9.0"
toml = "0.5.9"
serde_derive = "1.0"
serde = "1.0"